Adjust quiz question typography

--- a/quiz-hostinger/index.html
+++ b/quiz-hostinger/index.html
@@ -17,7 +17,7 @@
            onerror="this.closest('.hero').classList.add('fallback'); this.remove()" />
     </figure>
 
-    <h1 class="question-title">
+    <h1 class="question-title quiz-question text-[17px] leading-[22px] md:text-[20px] md:leading-[28px] font-semibold text-[#1a1a1a]">
       ¿Ya viste los videos virales de mujeres perdiendo 6–10 kilos en 30 días con esta receta?
     </h1>
 
