Adjust quiz option icon active styles

--- a/quiz-hostinger/index.html
+++ b/quiz-hostinger/index.html
@@ -28,8 +28,8 @@
         <div class="option-wrap flex h-full flex-row">
           <div class="option-inner w-full h-full p-4 gap-3 flex justify-between items-center" style="min-height:64px;">
             <div class="py-1 self-center">
-              <div class="option-icon-select h-5 w-5 rounded-full border-2 border-[#5a7d2b]">
-                <img src="./assets/check.svg" alt="" class="option-icon-img w-3.5 h-3.5" />
+              <div class="option-icon-select relative h-5 w-5 rounded-full bg-white border-2 border-[#CFE8B3] group-[.active]:bg-white group-[.active]:border-[#CFE8B3]">
+                <img src="./assets/check.svg" alt="" class="option-icon-img absolute inset-0 m-auto w-3.5 h-3.5 opacity-0 group-[.active]:opacity-100 pointer-events-none select-none" />
               </div>
             </div>
             <div class="flex-1 card-text">
@@ -48,8 +48,8 @@
         <div class="option-wrap flex h-full flex-row">
           <div class="option-inner w-full h-full p-4 gap-3 flex justify-between items-center" style="min-height:64px;">
             <div class="py-1 self-center">
-              <div class="option-icon-select h-5 w-5 rounded-full border-2 border-[#5a7d2b]">
-                <img src="./assets/check.svg" alt="" class="option-icon-img w-3.5 h-3.5" />
+              <div class="option-icon-select relative h-5 w-5 rounded-full bg-white border-2 border-[#CFE8B3] group-[.active]:bg-white group-[.active]:border-[#CFE8B3]">
+                <img src="./assets/check.svg" alt="" class="option-icon-img absolute inset-0 m-auto w-3.5 h-3.5 opacity-0 group-[.active]:opacity-100 pointer-events-none select-none" />
               </div>
             </div>
             <div class="flex-1 card-text">
@@ -68,8 +68,8 @@
         <div class="option-wrap flex h-full flex-row">
           <div class="option-inner w-full h-full p-4 gap-3 flex justify-between items-center" style="min-height:64px;">
             <div class="py-1 self-center">
-              <div class="option-icon-select h-5 w-5 rounded-full border-2 border-[#5a7d2b]">
-                <img src="./assets/check.svg" alt="" class="option-icon-img w-3.5 h-3.5" />
+              <div class="option-icon-select relative h-5 w-5 rounded-full bg-white border-2 border-[#CFE8B3] group-[.active]:bg-white group-[.active]:border-[#CFE8B3]">
+                <img src="./assets/check.svg" alt="" class="option-icon-img absolute inset-0 m-auto w-3.5 h-3.5 opacity-0 group-[.active]:opacity-100 pointer-events-none select-none" />
               </div>
             </div>
             <div class="flex-1 card-text">
